--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,23 @@
 version: '3.8'
 
 services:
-  cryptd:
-    build: .
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    environment:
+      - JWT_SECRET=${JWT_SECRET:-change-this-secret-in-production}
     volumes:
       - cryptd-data:/data
     restart: unless-stopped
-    environment:
-      - TZ=UTC
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/v1/auth/kdf?username=test"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 5s
+      start_period: 40s
 
 volumes:
   cryptd-data:
-    driver: local
