--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,6 +14,10 @@ RUN npm ci
 # Copy source code
 COPY . .
 
+# Build argument for API base URL
+ARG VITE_API_BASE
+ENV VITE_API_BASE=${VITE_API_BASE}
+
 # Build for production
 RUN npm run build
 
