Refactor Docker workflows and update dependencies
- Commented out the artifact attestation step in both backend and frontend Docker workflows to streamline the build process.
- Updated the backend Dockerfile to disable CGO for a pure Go build, improving compatibility and reducing image size.
- Replaced the SQLite driver from `mattn/go-sqlite3` to `modernc.org/sqlite` for better performance and compatibility with CGO disabled.
- Updated `go.mod` and `go.sum` to reflect the new SQLite dependency and added several indirect dependencies for improved functionality.

--- a/.github/workflows/frontend-docker.yml
+++ b/.github/workflows/frontend-docker.yml
@@ -71,10 +71,10 @@ jobs:
           build-args: |
             VITE_API_BASE=${{ vars.VITE_API_BASE }}
 
-      - name: Generate artifact attestation
-        if: github.event_name != 'pull_request'
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          subject-digest: ${{ steps.meta.outputs.digest }}
-          push-to-registry: true
+      # - name: Generate artifact attestation
+      #   if: github.event_name != 'pull_request'
+      #   uses: actions/attest-build-provenance@v1
+      #   with:
+      #     subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      #     subject-digest: ${{ steps.meta.outputs.digest }}
+      #     push-to-registry: true
