--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,6 @@ FROM golang:1.24-alpine AS builder
 
 WORKDIR /app
 
-# Install build dependencies
-RUN apk add --no-cache gcc musl-dev sqlite-dev
-
 # Copy go mod files
 COPY go.mod go.sum ./
 RUN go mod download
@@ -13,8 +10,8 @@ RUN go mod download
 # Copy source code
 COPY . .
 
-# Build the application
-RUN CGO_ENABLED=1 GOOS=linux go build -a -installsuffix cgo -o /app/cryptd-server ./cmd/server
+# Build the application (CGO disabled for pure Go build)
+RUN CGO_ENABLED=0 GOOS=linux go build -a -ldflags="-s -w" -o /app/cryptd-server ./cmd/server
 
 # Runtime stage
 FROM alpine:latest
@@ -22,7 +19,7 @@ FROM alpine:latest
 WORKDIR /app
 
 # Install runtime dependencies
-RUN apk --no-cache add ca-certificates sqlite-libs
+RUN apk --no-cache add ca-certificates
 
 # Copy binary from builder
 COPY --from=builder /app/cryptd-server .
