--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -79,9 +79,9 @@ jobs:
           cache-dependency-path: backend/go.sum
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@v9
         with:
-          version: latest
+          version: v2.8.0
           working-directory: backend
           args: --timeout=5m
 
