--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -1,4 +1,4 @@
-name: Frontend Tests
+name: Web Tests
 
 on:
   push:
@@ -6,14 +6,14 @@ on:
       - main
       - develop
     paths:
-      - 'frontend/**'
-      - '.github/workflows/frontend-test.yml'
+      - 'web/**'
+      - '.github/workflows/web-test.yml'
   pull_request:
     branches:
       - main
       - develop
     paths:
-      - 'frontend/**'
+      - 'web/**'
   workflow_dispatch:
 
 jobs:
@@ -29,18 +29,18 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: web/package-lock.json
 
       - name: Install dependencies
-        working-directory: ./frontend
+        working-directory: ./web
         run: npm ci
 
       - name: Run ESLint
-        working-directory: ./frontend
+        working-directory: ./web
         run: npm run lint
 
       - name: Run TypeScript type checking
-        working-directory: ./frontend
+        working-directory: ./web
         run: npx tsc --noEmit
 
   build:
@@ -56,14 +56,14 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: web/package-lock.json
 
       - name: Install dependencies
-        working-directory: ./frontend
+        working-directory: ./web
         run: npm ci
 
       - name: Build application
-        working-directory: ./frontend
+        working-directory: ./web
         run: npm run build
         env:
           VITE_API_BASE: /api
@@ -71,11 +71,11 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: frontend-build
-          path: frontend/dist
+          name: web-build
+          path: web/dist
 
       - name: Check bundle size
-        working-directory: ./frontend
+        working-directory: ./web
         run: |
           echo "### Build Output Size" >> $GITHUB_STEP_SUMMARY
           du -sh dist >> $GITHUB_STEP_SUMMARY
