--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,10 +26,10 @@ services:
     build:
       context: ./web
       dockerfile: Dockerfile
-      args:
-        - VITE_API_BASE=${VITE_API_BASE:-http://localhost:8080}
     ports:
       - "80:80"
+    environment:
+      - API_BASE_URL=${API_BASE_URL:-http://localhost:8080}
     depends_on:
       - server
     restart: unless-stopped
