Update Nginx configuration to improve caching for runtime assets
- Added specific caching rules for `config.js` and `index.html` to prevent caching while allowing efficient revalidation using ETags.
- Retained SPA routing for all other routes to serve `index.html` as needed.
- Updated comments for clarity on caching behavior for static assets.

--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -15,21 +15,27 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # SPA routing - serve index.html for all routes
-    location / {
-        try_files $uri $uri/ /index.html;
+    # Don't cache runtime config (dynamically generated)
+    # Use ETag for efficient revalidation - browser will get 304 if unchanged
+    location = /config.js {
+        add_header Cache-Control "no-cache";  # Must revalidate, but allows 304
+        etag on;
     }
 
-    # Cache static assets
+    # Don't cache index.html but use ETag for efficient revalidation
+    location = /index.html {
+        add_header Cache-Control "no-cache";  # Must revalidate, but allows 304
+        etag on;
+    }
+
+    # Cache static assets (but config.js and index.html are handled above)
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # Don't cache index.html
-    location = /index.html {
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
+    # SPA routing - serve index.html for all routes
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
